--- a/Gian_payment.html
+++ b/Gian_payment.html
@@ -2,60 +2,81 @@
 <html>
 <head>
     <style>
-        body {
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
             font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
         }
+
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: -1;
+        }
+
+        .video-background video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
         .container {
-            background-color: #fff;
+            background-color: rgba(255, 255, 255, 0.95); /* Slight transparency for effect */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
+            z-index: 1;
         }
+
         .qr-code {
             margin-right: 20px;
         }
+
         .qr-code img {
             width: 200px;
             height: 200px;
             border: 2px solid #ccc;
             border-radius: 10px;
         }
+
         .details {
             line-height: 1.6;
         }
+
         .details h3 {
             margin-top: 0;
             color: #333;
         }
+
         .details p {
             margin: 5px 0;
         }
-        .pay-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: background-color 0.3s;
-        }
-        .pay-button:hover {
-            background-color: #218838;
-        }
+
     </style>
-      <title>MHPDIMG-2024</title>
-	  <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/imrashmi/data-repository@main/nitr_logo.png">
+    <title>MHPDIMG-2024</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/imrashmi/data-repository@main/nitr_logo.png">
 </head>
 <body>
+    <!-- Background Video -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline>
+            <source src="https://nitrkl.ac.in/assets/video/hero.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <!-- Main Content Container -->
     <div class="container">
         <div class="qr-code">
             <img src="https://cdn.jsdelivr.net/gh/imrashmi/data-repository@main/nit_qr_code.png" alt="UPI QR Code">
