--- a/Gian_payment.html
+++ b/Gian_payment.html
@@ -63,6 +63,29 @@
             margin: 5px 0;
         }
 
+        .pay-button {
+            display: inline-flex;
+            padding: 15px 20px;
+            justify-content: center;
+            align-items: center;
+            background-color: #a2b9bc;
+            color: #484f4f;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 10px;
+            transition: background-color 0.3s;
+        }
+
+        .pay-button img {
+            width: 40px; /* Adjust the size as needed */
+            height: 40px;
+            margin-right: 5px; /* Space between icon and text */
+        }
+
+        .pay-button:hover {
+            background-color: #218838;
+        }
+
     </style>
     <title>MHPDIMG-2024</title>
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/imrashmi/data-repository@main/nitr_logo.png">
@@ -87,6 +110,7 @@
             <p><strong>IFSC No:</strong> SBIN0002109</p>
             <p><strong>Account Name:</strong> Continuing Education, NIT Rourkela</p>
             <p><strong>Branch:</strong> State Bank of India, NIT Campus, Rourkela</p>
+            <a class="pay-button"><img src="https://cdn.jsdelivr.net/gh/imrashmi/data-repository@main/upi-icon.png" alt="Pay Icon"> <b> 01389517841@sbi </b> </a>
         </div>
     </div>
 </body>
