--- a/Gian_payment.html
+++ b/Gian_payment.html
@@ -83,7 +83,7 @@
         }
 
         .pay-button:hover {
-            background-color: #218838;
+            background-color: #0D1117;
         }
 
     </style>
