--- a/Gian_payment.html
+++ b/Gian_payment.html
@@ -69,7 +69,7 @@
             justify-content: center;
             align-items: center;
             background-color: #a2b9bc;
-            color: #484f4f;
+            color: #0D1117;
             text-decoration: none;
             border-radius: 5px;
             margin-top: 10px;
@@ -84,6 +84,7 @@
 
         .pay-button:hover {
             background-color: #0D1117;
+            color: #fff;
         }
 
     </style>
